<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:material="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/pharmacy"
        android:contentDescription="@string/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"
        android:elevation="4dp"
        android:scaleType="centerInside" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cim"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#2E7D32"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:boxStrokeColor="#2E7D32"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditTextUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        app:boxStrokeColor="#2E7D32"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/inputUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/LoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:onClick="login"
        app:cornerRadius="16dp"
        app:iconTint="@android:color/white"
        android:layout_marginTop="24dp"
        app:backgroundTint="#2E7D32"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/inputPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginwithGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/loginwithGoogle"
        android:onClick="loginWithGoogle"
        app:iconPadding="8dp"
        app:cornerRadius="16dp"
        android:textColor="#2E7D32"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/LoginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginAsGuest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/loginAsGuest"
        android:onClick="loginAsGuest"
        app:cornerRadius="16dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:textColor="#2E7D32"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/loginwithGoogle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/RegisterButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:onClick="register"
        app:cornerRadius="16dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textColor="#2E7D32"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/loginAsGuest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
