<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/itemTitle"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemImage"
            android:padding="8dp"
            android:text="@string/item_placeholder"
            android:textColor="?android:textColorSecondary" />

        <TextView
            android:id="@+id/elerheto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemTitle"
            android:padding="8dp"
            android:text="@string/elerheto"
            android:textColor="@color/pharmaGreen"
            android:isIndicator="true"
            android:layout_marginStart="8dp"
            />

        <TextView
            android:id="@+id/subTitle"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/elerheto"
            android:padding="8dp"
            android:text="@string/item_info_placeholder" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/subTitle"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:textColor="@color/pharmaGreen"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/price"
            android:layout_centerHorizontal="true" >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_to_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kosárba"
                android:textColor="@color/white"
                android:layout_marginBottom="12dp"
                android:layout_margin="5dp"
                android:layout_centerHorizontal="true"
                app:backgroundTint="@color/pharmaGreen"
                app:cornerRadius="16dp"
                app:iconTint="@android:color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Törlés"
                android:textColor="@color/white"
                android:layout_marginBottom="12dp"
                android:layout_margin="5dp"
                android:layout_centerHorizontal="true"
                app:backgroundTint="@color/pharmaGreen"
                app:cornerRadius="16dp"
                app:iconTint="@android:color/white" />

        </LinearLayout>


    </RelativeLayout>
</androidx.cardview.widget.CardView>